Fix referencias dia1, inicio dia2

--- a/Cuaderno/dia1.tex
+++ b/Cuaderno/dia1.tex
@@ -581,6 +581,7 @@ un nuevo comportamiento al botón en el \blockEditor.
 \label{fig:button1ClickPlayVibrate}
 \end{figure}
 
+
 \item Observa ahora que el bloque \block{llamar Sonido1.Vibrar}
   incluye el texto ``milisegundos''. Un espacio abierto en un bloque
   significa que necesitas conectar algo ahí para especificar en
@@ -591,9 +592,10 @@ un nuevo comportamiento al botón en el \blockEditor.
   para hacer que el dispositivo vibre por medio segundo, tienes que
   poner un valor de 500 milisegundos. Para poner un valor de 500
   necesitas arrastrar un bloque numérico. Selecciona el componente
-  integrado ``Matemáticas'', como se muestra en la~\Cref{}. Deberías
-  ver un bloque con un cero como primer elemento. Puedes arrastrar
-  este bloque y cambiar su valor por cualquier otro número.
+  integrado ``Matemáticas'', como se muestra en
+  la~\Cref{fig:button1ClickPlayVibrateMillis}. Deberías ver un bloque
+  con un cero como primer elemento. Puedes arrastrar este bloque y
+  cambiar su valor por cualquier otro número.
 
 \begin{figure}[H]
 \centering
