--- a/Cuaderno/tex/titulo.tex
+++ b/Cuaderno/tex/titulo.tex
@@ -34,12 +34,12 @@
       \label{fig:Viper}
     \end{subfigure}
     ~
-%    ~
-%    \begin{subfigure}[b]{0.4\textwidth}
-%      \centering
-%      \includegraphics[width=\textwidth]{Samsung.png}
-%      \label{fig:Phyrex}
-%    \end{subfigure}
+    \begin{subfigure}[b]{0.4\textwidth}
+      \centering
+      \includegraphics[width=\textwidth]{Samsung.png}
+      \label{fig:Phyrex}
+    \end{subfigure}
+    ~
     \begin{subfigure}[b]{0.23\textwidth}
       \centering
       \includegraphics[width=\textwidth]{SamsungTechInstitute.jpg}
