--- a/Cuaderno/appInventor.tex
+++ b/Cuaderno/appInventor.tex
@@ -18,4 +18,6 @@
 \newcommand\fontSize{\property{Tamaño de letra}}
 \newcommand\mediafile[1]{\emph{#1}\xspace}
 \newcommand\block[1]{\textbf{#1}\xspace}
-\newcommand\resources[1]{\path{#1}}
+\newcommand\resources[1]{\path{#1}\xspace}
+\newcommand\parameter[1]{\texttt{#1}\xspace}
+\newcommand\variable[1]{\texttt{#1}\xspace}
